org.strategoxt.imp.debug.instrumentation/test/stratego/projects/invalid-program/program.str
module program

strategies
	main =
		debug(!"MAIN")